projects/Media/docroot/assets/css/global/help.css
/* ... */
.help-center--header {
	font-size: 26px;
	font-weight: bold;
	line-height: 0.92;
	margin-bottom: 0;
}

.help-center--subheader {
	line-height: 1.44;
	margin: 15px 0 20px 0;
}

.help-center--container form#contact_fd_faq {
	align-items: center;
	padding: 0;
}

input[type="text"].search-input {
	background-color: #ffffff;
	border-style: none;
	box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.1);
	box-sizing: border-box;
	height: 35px;
	padding: 10px;
	-webkit-appearance: none;
	width: 301px;
}

input[type="text"].search-input::placeholder {
	color: #757575;
	font-size: 16px;
}

.search-button {
	background-image: url('/media/layout/nav/globalnav/fdx/search-icon.png');
	background-position: center;
	background-repeat: no-repeat;
	border-radius: 0;
	height: 35px;
	object-fit: contain;
	width: 44px;
}

.self-credit--container {
	border: solid 1px #cccccc;
	border-radius: 4px;
	box-sizing: border-box;
	padding: 20px;
	width: 397px;
}

.self-credit--header {
	line-height: normal;
	margin-bottom: 0;
}

.self-credit--subheader {
	font-size: 14px;
	line-height: normal;
	margin: 14px 0;
}

.cssbutton.green.self-credit-button {
	width: 200px;
}

.help--main-content {
	flex-direction: row;
}

#helpsidecontent {
	width: 42%;
}

.main-content--right {
	border: 1px solid #dddddd;
	height: fit-content;
	max-width: 568px;
	width: 58%;
}

.main-content--left .container {
	flex-direction: column;
	justify-content: flex-start; 
}

.main-content--left .section-header {
	margin-bottom: 0;
}

.main-content--left .your-account.container {
	margin-bottom: 50px;
}

.section-header span {
	border-bottom: 2px solid #cccccc;
	color: #333333;
	display: inline-block;
	letter-spacing: 0.5px;
	line-height: 1;
	padding-bottom: 0.5em;
	text-align: left;
	width: 76%;
}

.link-list-container {
	padding-left: 0;
	margin: 22px 0 0 0;
}

.link-list-container li {
	display: flex;
	flex-direction: row;
	justify-content: flex-start;
	list-style: none;
    font-weight: normal;
    font-style: normal;
    font-stretch: normal;
    line-height: 1.88;
    letter-spacing: normal;
    color: #408244;
}

.link-list-container li a {
	display: block;
	text-align: left;
	width: fit-content;
}

.main-content--right {
	box-sizing: border-box;
	padding: 46px;
}

.main-content--right .form-elements-wrapper.form-header {
	flex-direction: column;
}

.main-content--right .help-contact-form.header,
.main-content--right .help-contact-form.subheader {
	text-align: left;
}

.main-content--right .help-contact-form.subheader {
	margin: 35px 0 38px;
}

.main-content--right .help-contact-form.subheader p {
	margin: 0;
}

#contact_fd_contact .form-elements-wrapper.main-content {
	flex-direction: column;
}

.help-contact-form .error {
	text-align: left;
	font-family: Verdana, sans-serif;
	font-size: 12px;
}

#help-page .help-contact-form #help_fieldset {
	min-width: 100%;
}

.help-contact-form.header {
	color: #333333;
	line-height: 1;
}

.help-contact-form .cs-contact-hours * {
	font-family: Verdana, sans-serif;
	font-size: 16px;
	font-weight: normal;
}

.help-contact-form .cs-contact-hours div p b span:first-child {
	display: none;
}

.help-contact-form.subheader {
	color: #333333;
}

.help-contact-form.login-link {
	color: #408244;
	font-weight: normal;
	margin: 0 0 50px 0;
	text-align: left;
}

.help-contact-form .form-elements-wrapper.main-content {
	margin-top: 0;
}

.help-contact-form .form-group  {
	flex-direction: row;
	margin-bottom: 30px;
}

.help-contact-form .form-group.email,
.help-contact-form .form-group.subject-container {
	flex-direction: column;
}

.help-contact-form .form-group .customer-email {
	color: #666666;
}

.help-contact-form .form-group-name-container {
	flex-direction: row;
	justify-content: space-between;
}

.help-contact-form .form-group.phone_number {
	flex-direction: row;
	justify-content: space-between;
}

.help-contact-form .form-group.first_name,
.help-contact-form .form-group.last_name {
	flex-direction: column;
	width: 48%;
}

.help-contact-form .form-group.phone_number div {
	flex-direction: column;
}

.help-contact-form .form-group.phone_number div:first-child {
	width: 73%;
}

.help-contact-form .form-group.phone_number div:nth-child(2) {
	width: 23%;
}

.form-group.phone_number.flex div input {
	display: inline-block;
	max-width: 100%;
}

.help-contact-form .form-group label {
	text-align: left;
}

.help-contact-form .form-group.phone_number div:first-child label::after {
	color: #666666;
	content: 'Optional';
	float: right;
	font-weight: normal;
}

.help-contact-form .form-group.subject-message-container {
	flex-direction: column;
}

.help-contact-form .form-group.message {
	flex-direction: column;
	margin-bottom: 0;
}

.help-contact-form .select-wrapper #subject.customsimpleselect {
	width: 100%;
}

.help-contact-form .select-wrapper:after {
	top: 0;
	transform: translateY(50%);
}

.help-contact-form .buttons-container {
	justify-content: flex-end;
}

.help-contact-form .form-group.customer-name-container {
	flex-direction: column;
	margin-bottom: 15px;
}

.help-contact-form .customer-name.customer-name-container {
	text-align: left;
}

.help-contact-form .customer-name.customer-name-container .customer-email {
	color: #666666;
}

.help-contact-form .form-group label.login-label,
.help-contact-form .form-group a.login-link {
	color: #408244;
	font-weight: normal;
}

.help-contact-form .form-group.customer-name-container.login {
	margin-top: 14px;
}

.help--main-content .help.footer-container {
	display: none;
}

.help.footer-container #helpfooter {
	display: flex;
	align-items: center;
	background-color: #f5f5f5;
	border-radius: 4px;
	flex-direction: row;
	height: 64px;
	margin-top: 40px;
}

.help.footer-container .help-aside {
	display: flex;
	align-items: center;
	border-right: 1px solid #cccccc;
	color: #666666;
	font-size: 16px;
	height: 34px;
	justify-content: center;
	width: 40%;
}

.help.footer-container .help-aside a {
	padding-left: 8px;
}
/* ... */

